# cpfloat-gecode

./: CMakeLists.txt  README  README.md
cpfloat/: cpfloat.hh  cpfloat.vis  expression.hh  expression.hpp  expressiongustavo.hh  main.cpp
cpfloat/prop/: acos.cpp  acos.hh  addition.cpp  addition.hh  asin.cpp  asin.hh  atan.cpp  atan.hh  cos.cpp  cos.hh  equality.cpp  equality.hh  hc4.cpp  hc4.hh  k3b.cpp  k3b.hh  power.cpp  power.hh  sin.cpp  sin.hh  subtraction.cpp  subtraction.hh  tan.cpp  tan.hh  times.cpp  times.hh
cpfloat/prop-advanced/: expression.hh  hc4.cpp  hc4.hh
cpfloat/prop-base/: acos.cpp  acos.hh  addition.cpp  addition.hh  asin.cpp  asin.hh  atan.cpp  atan.hh  cos.cpp  cos.hh  equality.cpp  equality.hh  power.cpp  power.hh  sin.cpp  sin.hh  subtraction.cpp  subtraction.hh  tan.cpp  tan.hh  times.cpp  times.hh
cpfloat/prop/.svn/: all-wcprops  entries
cpfloat/prop/.svn/text-base/: addition.hh.svn-base  asin.cpp.svn-base  atan.cpp.svn-base  hc4.cpp.svn-base  hc4.hh.svn-base  k3b.hh.svn-base  power.cpp.svn-base  sin.hh.svn-base  subtraction.hh.svn-base  tan.cpp.svn-base
smath/: IA.c  IA.h  IAasincos.c  IAexp.c  IAsincos.c  README.html  bnr.c  exp.c  makefile  narrow.c  narrow_bool.c  narrow_mult.c  narrow_trig.c  power.c  smath.h  sound_ops.c  test_precision.c  trig2pi.c
tests/: arithmetic.cpp  bellido-hc4.cpp  bellido-k3b.cpp  bronstein-hc4.cpp  caprasse-hc4.cpp  chemistry-k3b.cpp  collins-hc4.cpp  collins-k3b.cpp  cyclo-hc4.cpp  floatgrocery.cpp  freudenstein-hc4.cpp  freudenstein-k3b.cpp  grocery-hc4.cpp  sinxcosx-hc4.cpp  sinxcosx.cpp  sinxx1-hc4.cpp  sinxx2-hc4.cpp  trigonometric.cpp
